--- a/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
+++ b/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
@@ -188,7 +188,8 @@
                                                                                 top="5.0"/>
                                                                     </padding>
                                                                 </HBox>
-                                                                <TextField promptText="written number">
+                                                                <TextField fx:id="writtenNumber1Field"
+                                                                           promptText="written number">
                                                                     <padding>
                                                                         <Insets bottom="5.0" left="5.0" right="5.0"
                                                                                 top="5.0"/>
@@ -271,7 +272,8 @@
                                                                                 top="5.0"/>
                                                                     </padding>
                                                                 </HBox>
-                                                                <TextField promptText="written number">
+                                                                <TextField fx:id="writtenNumber2Field"
+                                                                           promptText="written number">
                                                                     <padding>
                                                                         <Insets bottom="5.0" left="5.0" right="5.0"
                                                                                 top="5.0"/>
