--- a/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
+++ b/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <AnchorPane prefHeight="600.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.121"
@@ -16,7 +17,7 @@
                 <AnchorPane maxHeight="100.0" minHeight="80.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                     <children>
                         <GridPane alignment="CENTER" hgap="5.0" layoutX="89.0" layoutY="18.0" prefHeight="77.0"
-                                  prefWidth="906.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="89.0"
+                                  prefWidth="906.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="100.0"
                                   AnchorPane.topAnchor="0.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.0" minWidth="0.0" prefWidth="33.0"/>
@@ -67,6 +68,9 @@
                                 <TextField fx:id="distanceField" alignment="CENTER_RIGHT" promptText="300"/>
                             </children>
                         </HBox>
+                        <ImageView fx:id="icoImageView" fitHeight="90.0" fitWidth="90.0" layoutX="1.0" layoutY="-2.0"
+                                   pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0"
+                                   AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0"/>
                     </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
